...
        let name: String
        let animalType: String // Este es un String
        let imageName: String
    }
    
    private let petOptions: [PetOption] = [
        .init(name: "Panda", animalType: "Panda", imageName: "panda"),
        .init(name: "León", animalType: "León", imageName: "leon"),
        .init(name: "Loro", animalType: "Loro", imageName: "loro")
    ]
    
    var body: some View {
        VStack(spacing: 30) {
            Text("Elige tu Mascota")
                .font(.largeTitle)
                .fontWeight(.bold)
                .foregroundColor(.blue)
                .padding(.top, 50)
            
            Text("¡Selecciona quién será tu compañero de aventuras!")
...
